fix dark mode

--- a/extension/style/base.css
+++ b/extension/style/base.css
@@ -9,10 +9,13 @@
   display: none;
 }
 
-/* .jp-mod-active {
+/*.jp-mod-active {
   .recipe-panel-layout {
     margin-top: 25px;
   }
+}*/
+/* .jp-Notebook {
+  background-color: #0F172A;
 } */
 
 .jp-cell-toolbar {
@@ -28,14 +31,7 @@
 }
 
 .lm-DockPanel {
-  /* background-color: transparent;
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-  --tw-gradient-to: #06b6d4 var(--tw-gradient-from-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  --tw-gradient-from: #3f83f8 var(--tw-gradient-to-position); */
-  /* background: linear-gradient(-45deg, #23a6d5, #23d5ab, #ee7752, #e73c7e); */
-  background: linear-gradient(-45deg, #23a6d5, #23d5ab, #23a6d5, #23d5ab);
-  /* background: linear-gradient(-45deg, #23d5ab, #23a6d5, #06b6d4, #3f83f8); */
+  background: linear-gradient(-45deg, #3b82f6, #a855f7);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
@@ -63,13 +59,17 @@
   background-size: cover;
 }
 
-#jupyterlab-splash.light {
+#jupyterlab-splash {
+  background-color: white;
+}
+
+/* #jupyterlab-splash.light {
   background-color: white;
 }
 
 #jupyterlab-splash.dark {
   background-color: var(--md-grey-900);
-}
+} */
 
 .splash-fade {
   animation: 2s fade-out forwards;
